--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
                         <div>
                             <label for="density">Density</label>
                             <input type="text" id="density" name="density" onkeydown="allowOnlyNumbersAndDot(event)"
-                                required>
+                                oninput="allowOnlyNumbersAndDot(event)" required>
                         </div>
                         <div>
                             <label for="viscosity">Viscosity</label>
-                            <input type="text" id="viscosity" name="viscosity" onkeydown="allowOnlyNumbersAndDot(event)"
-                                required>
+                            <input type="text" id="viscosity" name="viscosity" oninput="allowOnlyNumbersAndDot(event)"
+                                onkeydown="allowOnlyNumbersAndDot(event)" required>
                         </div>
                     </div>
 
@@ -98,8 +98,8 @@
                         </div>
                         <div>
                             <label for="quantity">Quantity</label>
-                            <input type="text" id="quantity" name="quantity" onkeydown="allowOnlyNumbersAndDot(event)"
-                                required>
+                            <input type="text" id="quantity" name="quantity" oninput="allowOnlyNumbersAndDot(event)"
+                                onkeydown="allowOnlyNumbersAndDot(event)" required>
                         </div>
                     </div>
 
