--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
                     <div class="input-group">
                         <div>
                             <label for="density">Density</label>
-                            <input type="text" id="density" name="density" onkeydown="allowOnlyNumbersAndDot(event)"
-                                oninput="allowOnlyNumbersAndDot(event)" required>
+                            <input type="text" id="density" name="density" 
+                                oninput="allowOnlyNumbersAndDot(event)"
+                                 required>
                         </div>
                         <div>
                             <label for="viscosity">Viscosity</label>
                             <input type="text" id="viscosity" name="viscosity" oninput="allowOnlyNumbersAndDot(event)"
-                                onkeydown="allowOnlyNumbersAndDot(event)" required>
+                                required>
                         </div>
                     </div>
 
@@ -99,7 +100,7 @@
                         <div>
                             <label for="quantity">Quantity</label>
                             <input type="text" id="quantity" name="quantity" oninput="allowOnlyNumbersAndDot(event)"
-                                onkeydown="allowOnlyNumbersAndDot(event)" required>
+                                required>
                         </div>
                     </div>
 
